# cookiecutter-py

./: README.md  cookiecutter.json
{{ cookiecutter.repo_name }}/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup_project
{{ cookiecutter.repo_name }}/data/: .gitignore
{{ cookiecutter.repo_name }}/notebooks/: sample.ipynb
{{ cookiecutter.repo_name }}/src/: locations.py
{{ cookiecutter.repo_name }}/src/data/: make_dataset.py
