[metadata]
name = src
version = 0.0.1
author = {{ cookiecutter.author }}
description = {{ cookiecutter.description }} 
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages=find:
python-requires = >=3.7
install_requires =
    click
    python-dotenv

[options.packages.find]
where=src
